# csv-with-fsspec

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env.toml  pyproject.toml
setup/: dotenv-from-toml.py
src/app/: Extractor.py  FS.py  Logger.py  Storage.py  Transformer.py  __main__.py  config.py
tests/samples/: data.20241024-1537Z.csv  esma_file.xml
tests/unit/: app-Extractor-test.py  app-Storage-test.py  app-Transformer-test.py  app-config-test.py  app-main-test.py
